# LogiBuddy

./: DEPLOYMENT_GUIDE.md  LOCAL_SETUP.md  README.md  design_guidelines.json  supabase_documents_migration.sql  supabase_lr_migration.sql  supabase_lr_migration_part1.sql  supabase_lr_migration_part2.sql  supabase_schema.sql
.emergent/: emergent.yml  summary.txt
backend/: .dockerignore  .env  Dockerfile  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  server.py
backend/tests/: test_lr_workflow.py  test_supabase_integration.py
frontend/: .env  tailwind.config.js  vercel.json
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: DocumentList.js  DocumentUpload.js  Layout.js  ResponsiveTable.js
frontend/src/lib/: api.js  utils.js
frontend/src/pages/: CustomerDetail.js  Customers.js  Dashboard.js  DriverDetail.js  Drivers.js  Login.js  OrderDetail.js  Orders.js  PaymentDetail.js  Payments.js  Reports.js  TransporterDetail.js  Transporters.js  TripDetail.js  Trips.js  TruckDetail.js  Trucks.js
memory/: PRD.md
test_reports/: iteration_1.json  iteration_2.json
test_reports/pytest/: pytest_results.xml
