[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freightflow-backend"
version = "1.0.0"
description = "FreightFlow Logistics Broker Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.110.1",
    "uvicorn==0.25.0",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.22",
    "pydantic==2.12.5",
    "supabase==2.28.0",
    "python-jose==3.5.0",
    "passlib==1.7.4",
    "bcrypt==4.1.3",
    "httpx==0.28.1",
]
